Add sample endpoints to get quiz and check answers

--- a/Web Quiz Engine with Java/Solving a simple quiz/task-info.yaml
+++ b/Web Quiz Engine with Java/Solving a simple quiz/task-info.yaml
@@ -12,6 +12,27 @@ files:
   - name: build.gradle
     visible: true
     learner_created: false
+  - name: src/engine/model/Quiz.java
+    visible: true
+    learner_created: true
+  - name: src/engine/controller/QuizController.java
+    visible: true
+    learner_created: true
+  - name: src/engine/service/QuizService.java
+    visible: true
+    learner_created: true
+  - name: src/engine/repository/QuizRepository.java
+    visible: true
+    learner_created: true
+  - name: src/engine/repository/MockQuizRepository.java
+    visible: true
+    learner_created: true
+  - name: src/engine/model/dto/QuizAnswerResponse.java
+    visible: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/8252#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Wed, 14 May 2025 14:50:29 UTC"
 record: -1
