--- a/course-info.yaml
+++ b/course-info.yaml
@@ -14,5 +14,6 @@ programming_language: Java
 programming_language_version: 11
 content:
   - Web Quiz Engine with Java
+  - Topics
 mode: Study
 yaml_version: 2
