--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,11 +3,11 @@ hyperskill_project:
   ide_files: https://hyperskill.org/api/projects/91/additional-files/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Mon, 12 May 2025 20:43:18 UTC"
+update_date: "Wed, 14 May 2025 13:46:41 UTC"
 stages:
   - id: 504
     step: 8252
-    is_completed: false
+    is_completed: true
   - id: 505
     step: 8253
     is_completed: false
