--- a/Web Quiz Engine with Java/Lots of quizzes/task-info.yaml
+++ b/Web Quiz Engine with Java/Lots of quizzes/task-info.yaml
@@ -12,6 +12,27 @@ files:
   - name: test/tests/WebQuizEngineTest.java
     visible: false
     learner_created: false
+  - name: src/engine/service/QuizService.java
+    visible: true
+    learner_created: true
+  - name: src/engine/model/dto/QuizAnswerResponse.java
+    visible: true
+    learner_created: true
+  - name: src/engine/model/Quiz.java
+    visible: true
+    learner_created: true
+  - name: src/engine/repository/MockQuizRepository.java
+    visible: true
+    learner_created: true
+  - name: src/engine/repository/QuizRepository.java
+    visible: true
+    learner_created: true
+  - name: src/engine/controller/QuizController.java
+    visible: true
+    learner_created: true
+  - name: src/engine/model/request/QuizRequest.java
+    visible: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/8253#comment
 status: Unchecked
 record: -1
