Add validations for quiz and support for multiple answers

--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,14 +3,14 @@ hyperskill_project:
   ide_files: https://hyperskill.org/api/projects/91/additional-files/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Thu, 15 May 2025 16:40:04 UTC"
+update_date: "Fri, 16 May 2025 08:02:31 UTC"
 stages:
   - id: 504
     step: 8252
     is_completed: true
   - id: 505
     step: 8253
-    is_completed: false
+    is_completed: true
   - id: 506
     step: 8254
     is_completed: false
