--- a/Web Quiz Engine with Java/Lots of quizzes/task-info.yaml
+++ b/Web Quiz Engine with Java/Lots of quizzes/task-info.yaml
@@ -40,5 +40,8 @@ files:
     visible: true
     learner_created: true
 feedback_link: https://hyperskill.org/learn/step/8253#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Thu, 15 May 2025 17:33:04 UTC"
+record: 2
