Add persistent database, add entity support

--- a/Web Quiz Engine with Java/Moving quizzes to DB/task-info.yaml
+++ b/Web Quiz Engine with Java/Moving quizzes to DB/task-info.yaml
@@ -12,6 +12,49 @@ files:
   - name: test/tests/WebQuizEngineTest.java
     visible: false
     learner_created: false
+  - name: src/engine/model/request/QuizRequest.java
+    visible: true
+    learner_created: true
+  - name: src/engine/exception/GlobalExceptionHandler.java
+    visible: true
+    learner_created: true
+  - name: src/engine/repository/MockQuizRepository.java
+    visible: true
+    learner_created: true
+  - name: src/engine/model/request/SolutionRequest.java
+    visible: true
+    learner_created: true
+  - name: src/engine/repository/QuizRepository.java
+    visible: true
+    learner_created: true
+  - name: src/engine/model/response/QuizSolutionResponse.java
+    visible: true
+    learner_created: true
+  - name: src/engine/service/QuizService.java
+    visible: true
+    learner_created: true
+  - name: src/engine/service/QuizNotFoundException.java
+    visible: true
+    learner_created: true
+  - name: src/engine/model/Quiz.java
+    visible: true
+    learner_created: true
+  - name: src/engine/controller/QuizController.java
+    visible: true
+    learner_created: true
+  - name: src/engine/repository/JpaQuizRepository.java
+    visible: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/8255#comment
-status: Unchecked
+status: Failed
+feedback:
+  message: |-
+    Wrong answer in test #6
+
+    POST /api/quizzes should respond with status code 200, responded: 500
+
+    Response body:
+
+    {&quot;timestamp&quot;:&quot;2025-05-16T10:26:02.073+00:00&quot;,&quot;status&quot;:500,&quot;error&quot;:&quot;Internal Server Error&quot;,&quot;path&quot;:&quot;/api/quizzes&quot;}
+  time: "Fri, 16 May 2025 10:26:02 UTC"
 record: -1
