--- a/Web Quiz Engine with Java/Making quizzes more interesting/task-info.yaml
+++ b/Web Quiz Engine with Java/Making quizzes more interesting/task-info.yaml
@@ -43,5 +43,8 @@ files:
     visible: true
     learner_created: true
 feedback_link: https://hyperskill.org/learn/step/8254#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Fri, 16 May 2025 09:16:44 UTC"
+record: 3
