--- a/Web Quiz Engine with Java/User authorization/task-info.yaml
+++ b/Web Quiz Engine with Java/User authorization/task-info.yaml
@@ -12,6 +12,54 @@ files:
   - name: test/tests/WebQuizEngineTest.java
     visible: false
     learner_created: false
+  - name: src/engine/model/request/QuizRequest.java
+    visible: true
+    learner_created: true
+  - name: src/engine/repository/JpaQuizRepository.java
+    visible: true
+    learner_created: true
+  - name: src/engine/exception/GlobalExceptionHandler.java
+    visible: true
+    learner_created: true
+  - name: src/engine/repository/MockQuizRepository.java
+    visible: true
+    learner_created: true
+  - name: src/engine/model/request/SolutionRequest.java
+    visible: true
+    learner_created: true
+  - name: src/engine/service/QuizNotFoundException.java
+    visible: true
+    learner_created: true
+  - name: src/engine/repository/QuizRepository.java
+    visible: true
+    learner_created: true
+  - name: src/engine/model/response/QuizSolutionResponse.java
+    visible: true
+    learner_created: true
+  - name: src/engine/service/QuizService.java
+    visible: true
+    learner_created: true
+  - name: src/engine/model/Quiz.java
+    visible: true
+    learner_created: true
+  - name: src/engine/controller/QuizController.java
+    visible: true
+    learner_created: true
+  - name: src/engine/repository/UserRepository.java
+    visible: true
+    learner_created: true
+  - name: src/engine/model/User.java
+    visible: true
+    learner_created: true
+  - name: src/engine/controller/UserController.java
+    visible: true
+    learner_created: true
+  - name: src/engine/model/request/UserRequest.java
+    visible: true
+    learner_created: true
+  - name: src/engine/service/UserService.java
+    visible: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/8256#comment
 status: Unchecked
 record: -1
