--- a/Web Quiz Engine with Java/task/build.gradle
+++ b/Web Quiz Engine with Java/task/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-validation"
     runtimeOnly 'com.h2database:h2'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    compileOnly 'org.projectlombok:lombok:1.18.38'
+    annotationProcessor 'org.projectlombok:lombok:1.18.33'
 }
