--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://hyperskill.org/api/projects/91/additional-files/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Fri, 16 May 2025 08:02:31 UTC"
+update_date: "Fri, 16 May 2025 18:02:36 UTC"
 stages:
   - id: 504
     step: 8252
@@ -16,7 +16,7 @@ stages:
     is_completed: true
   - id: 507
     step: 8255
-    is_completed: false
+    is_completed: true
   - id: 508
     step: 8256
     is_completed: false
